- Modulo, board competencias (28%) - Signin y select challenge view

--- a/NJLive/web/css/style-nj.css
+++ b/NJLive/web/css/style-nj.css
@@ -6,11 +6,11 @@ body {
     background-color: white;
 }
 
-#loginbox {
+#box-float {
     margin-top: 30px;
 }
 
-#loginbox > div:first-child {        
+#box-float > div:first-child {        
     padding-bottom: 10px;    
 }
 
