--- a/NJLive/web/challenge/template/begins.xhtml
+++ b/NJLive/web/challenge/template/begins.xhtml
@@ -12,33 +12,13 @@
         </h:head>
         <h:body id="main">
 
-            <ui:define name="metadata">
-                <f:metadata>
-                    <f:viewParam name="key" value="#{clientBoardBean.key}" required="true" >
-                        <f:validateLength minimum="1" maximum="30" />
-                    </f:viewParam>
-                    <f:viewParam name="id" value="#{clientBoardBean.id}" required="true">
-                        <f:validateLength minimum="1" maximum="30" />
-                    </f:viewParam>
-                    <f:event type="preRenderView" listener="#{clientBoardBean.actionListenerPreRender}" />
-                </f:metadata>
-            </ui:define>
-
-            <ui:include src="/commons/navigation.xhtml" />
+            <div id="main-navigtion">
+                <ui:include src="/commons/navigation.xhtml" />
+            </div>
 
             <div id="main-body" style="margin-top: -20px;">
-                
-                <p:panel id="panel-client-problems" rendered="#{clientBoardBean.showProblems}">
-                    1
-                </p:panel>
-
-                <p:panel id="panel-client-score" rendered="#{clientBoardBean.showScore}">                  
-                    2
-                </p:panel>
-
-                <p:panel id="panel-client-submits" rendered="#{clientBoardBean.showSubmits}" >
-                    3
-                </p:panel>
+                <ui:insert name="content">
+                </ui:insert>
             </div>
 
             <div id="main-footer">
