--- a/NJWeb/web/css/style.css
+++ b/NJWeb/web/css/style.css
@@ -119,4 +119,48 @@ input[type="text"], input[type="file"]{
     font-size: 15px;
 }
 
+/*
+    Aux colors from table
+*/
+.table > thead > tr > td.ce,
+.table > tbody > tr > td.ce,
+.table > tfoot > tr > td.ce,
+.table > thead > tr > th.ce,
+.table > tbody > tr > th.ce,
+.table > tfoot > tr > th.ce,
+.table > thead > tr.ce > td,
+.table > tbody > tr.ce > td,
+.table > tfoot > tr.ce > td,
+.table > thead > tr.ce > th,
+.table > tbody > tr.ce > th,
+.table > tfoot > tr.ce > th {
+    background-color: #aaaa00;
+    color: #FFFFFF;
+}
+.table-hover > tbody > tr > td.ce:hover,
+.table-hover > tbody > tr > th.ce:hover,
+.table-hover > tbody > tr.ce:hover > td,
+.table-hover > tbody > tr:hover > .ce,
+.table-hover > tbody > tr.ce:hover > th {
+    background-color: #aaaa00;
+    color: #FFFFFF;
+}
 
+a:link { 
+    color: inherit;
+    text-decoration: none;
+} 
+
+/* ManyCheckbox */
+.select-many-checkbox tbody {
+    border-spacing: 2px !important;
+}
+
+.ui-selectmanycheckbox label {
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 16px 0 8px;
+    outline: medium none;
+    vertical-align: middle;
+    z-index: 1;
+}
